--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-```dotenv
+POSTGRES_DB=mydatabase
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
+```
+
+These files provide a complete setup for a basic application using Python with a PostgreSQL database, including Docker setup, database schema, and migration scripts. Adjust the parameters according to your specific requirements.
